# anm2ed

./: .Icon.ico-autosave.kra  .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  README.md  anm2ed.rc  app.manifest  compile_commands.json  settings.ini  vcpkg.json
assets/: atlas.kra  atlas_data_write.sh  bleh.txt  win_icon.rc
include/: libxm_compat.h  nanosvg.h  nanosvgrast.h  stdckdint.h
src/: COMMON.h  PACKED.h  RENDER_RESOURCES.h  RESOURCE.h  RESOURCES.h  STRINGS.h  animation_preview.cpp  animation_preview.h  animations.cpp  animations.h  anm2.cpp  anm2.h  canvas.cpp  canvas.h  canvas.hpp  clipboard.cpp  clipboard.h  dialog.cpp  dialog.h  dialog.hpp  dockspace.cpp  dockspace.h  document.cpp  document.h  document.hpp  document_manager.cpp  document_manager.h  document_new.cpp  document_new.hpp  documents.cpp  documents.h  editor.cpp  editor.h  events.cpp  events.h  ffmpeg.cpp  ffmpeg.h  file.cpp  file.h  filesystem.cpp  (+93 more)
src/anm2/: animation.cpp  animation.h  animation.hpp  animations.cpp  animations.h  animations.hpp  anm2.cpp  anm2.h  anm2.hpp  anm2_animations.cpp  anm2_events.cpp  anm2_items.cpp  anm2_layers.cpp  anm2_nulls.cpp  anm2_sounds.cpp  anm2_spritesheets.cpp  anm2_type.h  anm2_type.hpp  content.cpp  content.h  content.hpp  event.cpp  event.h  event.hpp  frame.cpp  frame.h  frame.hpp  info.cpp  info.hpp  item.cpp  item.h  item.hpp  layer.cpp  layer.h  layer.hpp  null.cpp  null.h  null.hpp  sound.cpp  sound.h  (+4 more)
src/anm2_new/: anm2.cpp  anm2.hpp
src/imgui/: actions.cpp  actions.hpp  autosave_restore.cpp  autosave_restore.hpp  dockspace.cpp  dockspace.h  dockspace.hpp  documents.cpp  documents.h  documents.hpp  imgui_.cpp  imgui_.h  imgui_.hpp  taskbar.cpp  taskbar.h  taskbar.hpp  toast.cpp  toast.h
src/imgui/popup/: autosave_restore.cpp  item_properties.cpp  item_properties.hpp
src/imgui/window/: animation_preview.cpp  animation_preview.h  animation_preview.hpp  animations.cpp  animations.h  animations.hpp  events.cpp  events.h  events.hpp  frame_properties.cpp  frame_properties.h  frame_properties.hpp  layers.cpp  layers.h  layers.hpp  nulls.cpp  nulls.h  nulls.hpp  onionskin.cpp  onionskin.h  onionskin.hpp  regions.cpp  regions.hpp  shaders.cpp  shaders.hpp  sounds.cpp  sounds.h  sounds.hpp  spritesheet_editor.cpp  spritesheet_editor.h  spritesheet_editor.hpp  spritesheets.cpp  spritesheets.h  spritesheets.hpp  timeline.cpp  timeline.h  timeline.hpp  tools.cpp  tools.h  tools.hpp  (+5 more)
src/imgui/wizard/: about.cpp  about.h  about.hpp  change_all_frame_properties.cpp  change_all_frame_properties.h  change_all_frame_properties.hpp  configure.cpp  configure.hpp  generate_animation_from_grid.cpp  generate_animation_from_grid.hpp  render_animation.cpp  render_animation.h  render_animation.hpp
src/imgui_new/: anm2_window.cpp  anm2_window.hpp
src/resource/: audio.cpp  audio.h  audio.hpp  audio_stream.cpp  audio_stream.h  audio_stream.hpp  font.cpp  font.h  friends.hpp  icon.h  icon.hpp  music.h  music.hpp  shader.cpp  shader.h  shader.hpp  strings.cpp  strings.h  strings.hpp  texture.cpp  texture.h  texture.hpp  xm_music.h  xm_wrapper.h
src/ui_new/: dockspace.cpp  dockspace.hpp  documents.cpp  documents.hpp  taskbar.cpp  taskbar.hpp  window.cpp  window.hpp
src/util/: file.cpp  file.hpp  file_.cpp  file_.h  filesystem_.cpp  filesystem_.h  map_.hpp  math.cpp  math_.cpp  math_.h  math_.hpp  origin.hpp  path.cpp  path.hpp  path_.cpp  path_.hpp  process.cpp  process.hpp  process_.cpp  sdl.cpp  sdl.h  string.cpp  string.hpp  string_.cpp  string_.h  time.cpp  time_.cpp  time_.h  unordered_map_.hpp  vector.hpp  vector_.h  working_directory.cpp  working_directory.hpp  xml.cpp  xml_.cpp  xml_.h  xml_.hpp
src/util/imgui/: constants.hpp  draw.cpp  draw.hpp  imgui.hpp  input.cpp  input.hpp  layout.cpp  layout.hpp  multiselect.cpp  multiselect.hpp  popup.cpp  popup.hpp  selectable.cpp  selectable.hpp  selection.cpp  selection.hpp  shortcut.cpp  shortcut.hpp  spacing.cpp  spacing.hpp  theme.cpp  theme.hpp  tooltip.cpp  tooltip.hpp  tree.cpp  tree.hpp  widgets.cpp  widgets.hpp
workshop/: metadata.xml
